fix bug and update view...

--- a/APPVIEW/Views/Account/ChangePassword.cshtml
+++ b/APPVIEW/Views/Account/ChangePassword.cshtml
@@ -260,7 +260,7 @@
         var newPasswordValidationSpan = document.getElementById('newPasswordValidation'); 
         var confirmPasswordValidationSpan = document.getElementById('confirmPasswordValidation');
         //cũ
-        oldPasswordInput.addEventListener('blur', function () {
+        oldPasswordInput.addEventListener('input', function () {
             validateOldPassword();
         });
         //mới
