--- a/APPVIEW/Views/Account/ForgotPassword.cshtml
+++ b/APPVIEW/Views/Account/ForgotPassword.cshtml
@@ -31,7 +31,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&ampdisplay=swap"
       rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
     <link rel="stylesheet" href="~/contentadmin/assets/vendor/fonts/materialdesignicons.css" />
 
     <!-- Menu waves for no-customizer fix -->
@@ -139,15 +139,16 @@
                             </div>
                         }
 
-                        <form asp-action="ForgotPassword" class="mb-3" method="POST">
+                        <form asp-action="ForgotPassword" class="mb-3" method="POST" onsubmit="return validateForm()">
                             <div class="form-floating form-floating-outline mb-3">
-                                <input type="text"
+                                <input name="email" type="email"
                                        class="form-control"
                                        id="email"
                                        asp-for="Email"
                                        placeholder="Nhập email của bạn"
                                        autofocus />
                                 <label>Email</label>
+                                <span id="emailError" class="text-danger" ></span>
                             </div>
                             <button class="btn btn-primary d-grid w-100">Gửi mã đặt lại</button>
                         </form>
@@ -184,7 +185,7 @@
 
 
     <!-- / Content -->
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.js"></script>
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
     <script src="~/contentadmin/assets/vendor/libs/jquery/jquery.js"></script>
@@ -193,6 +194,7 @@
     <script src="~/contentadmin/assets/vendor/libs/node-waves/node-waves.js"></script>
     <script src="~/contentadmin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="~/contentadmin/assets/vendor/js/menu.js"></script>
+   
 
     <!-- endbuild -->
 
@@ -205,6 +207,38 @@
 
     <!-- Place this tag in your head or just before your close body tag. -->
     <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script>
+        function validateForm() {           
+            var email = document.getElementById('email').value;
+                  
+
+            // Lấy thẻ span thông báo lỗi
+            
+            var EmailErrorSpan = document.getElementById('emailError');          
+            //
+
+            // Kiểm tra xem các trường có rỗng hay không
+            if (email.trim() === '') {
+                // alert('Vui lòng nhập đầy đủ thông tin.');
+                Swal.fire({
+                    title: "Hãy điền Địa chỉ Email",
+                    icon: "warning",
+                    confirmButtonText: "Ok"
+                })
+                return false; // Ngăn chặn form submit
+            }
+
+            // ... Các kiểm tra khác           
+
+            if (email.length > 50) {
+                NameErrorSpan.textContent = 'Không được nhập quá 50 kí tự';
+                return false;
+            }          
+
+
+            return true; // Cho phép form submit
+        }
+    </script>
   </body>
 </html>
 
