--- a/APPVIEW/Views/Account/Login.cshtml
+++ b/APPVIEW/Views/Account/Login.cshtml
@@ -161,28 +161,24 @@
                                                    placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
                                                    aria-describedby="password" required />
                                             <span id="passwordError" class="text-danger"></span>
-                                            <label for="password">Password</label>
+                                            <label for="password">Mật Khẩu</label>
                                         </div>
                                        
                                     </div>
                                 </div>
                             </div>
                             <div class="mb-3 d-flex justify-content-between">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="remember-me" />
-                                    <label class="form-check-label" for="remember-me"> Remember Me </label>
-                                </div>
                                 <a asp-action="ForgotPassword" asp-controller="Account" class="float-end mb-1">
                                     <span>Quên mật khẩu?</span>
                                 </a>
                             </div>
                             <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit">Login</button>
+                                <button class="btn btn-primary d-grid w-100" type="submit">Đăng Nhập</button>
                             </div>
                         </form>
                         <div class="text-center">
                             <a href="#" class="d-flex align-items-center justify-content-center" onclick="goBack()">
-                                <i class="mdi mdi-chevron-left scaleX-n1-rtl mdi-24px"></i>
+                                <i class="mdi mdi-arrow-left-circle scaleX-n1-rtl mdi-24px"></i>
                                 Quay lại
                             </a>
                             <script>
@@ -192,7 +188,6 @@
                             </script>
                         </div>
                         <p class="text-center">
-                            <span>New on our platform?</span>
                             <a href="~/Account/Register">
                                 <span>Tạo tài khoản mới</span>
                             </a>
