--- a/APPVIEW/Views/Bill/GetList2.cshtml
+++ b/APPVIEW/Views/Bill/GetList2.cshtml
@@ -1,148 +1,182 @@
-﻿@model IEnumerable<APPDATA.Models.Bill>
+﻿@using System.Globalization;
+@model IEnumerable<APPDATA.Models.Bill>
 @{
     ViewData["Title"] = "HoaDonTaiQuay";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    int stt = 0;
 }
 
+<div class="card">
+    <div class="card-header">
+    </div>
+    <div class="card-body">
+        <form asp-action="GetList2" class="row contact_form" method="post" style="margin-bottom:20px">
+            <div class="col-md-2 form-group">
+                <input style="300px" type="text" id="searchTerm" class="form-control" name="searchTerm" placeholder="Nhập mã hóa đơn để tìm kiếm">
 
 
 
+            </div>
+            <div class="col-md-2 form-group">
+                <button type="submit" class="btn btn-success">Tìm Kiếm</button>
+
+            </div>
+            <div class="col-md-2 form-group">
+                <input style="300px" type="date" id="searchTerm" class="form-control" name="start">
 
 
-<div class="row">
+            </div> <div class="col-md-2 form-group">
+                <input style="300px" type="date" id="searchTerm" class="form-control" name="end">
 
+            </div>
+            <div class="col-md-1 form-group">
+                <button type="submit" class="btn btn-success">Lọc</button>
+            </div>
+        </form>
+        <div class="table-responsive table-sm">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Stt</th>
+                        <th>
+                            <span>Tên Khách Hàng</span>
+                        </th>
 
+                        <th>
 
-    <form asp-action="GetList2" class="row contact_form" method="post" style="margin-bottom:20px">
-        <div class="col-md-2 form-group">
-            <input style="300px" type="text" id="searchTerm" class="form-control" name="searchTerm" placeholder="Nhập mã hóa đơn để tìm kiếm">
+                            Mã
+                        </th>
+                       
+                        <th>
 
+                            số điện thoại
+                        </th>
 
+                        <th>
 
-        </div>
-        <div class="col-md-2 form-group">
-            <button type="submit" class="btn btn-success">Tìm Kiếm</button>
+                            tổng tiền
+                        </th>
 
-        </div>
-        <div class="col-md-2 form-group">
-            <input style="300px" type="date" id="searchTerm" class="form-control" name="start">
+                        <th>
 
+                            Kiểu thanh toán
+                        </th>
+                        <th>
 
-        </div> <div class="col-md-2 form-group">
-            <input style="300px" type="date" id="searchTerm" class="form-control" name="end">
+                            Ngày tạo
+                        </th>
 
-        </div>
-        <div class="col-md-1 form-group">
-            <button type="submit" class="btn btn-success">Lọc</button>
-        </div>
-    </form>
+                        <th>
 
+                            ngày thanh toán
+                        </th>
 
+                        <th>
 
-</div>
-
-
-
-
-<table class="table">
-    <thead>
-        <tr>
-
-            <th>
-                <span>Người tạo hóa đơn</span>
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Code)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.TotalMoney)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Type)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.PayDate)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-
-                <td>
-                    @foreach (var acc in ViewBag.account)
+                            trạng thái
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model.Any())
                     {
-
-                        if (acc.Id == item.AccountId)
+                        @foreach (var itembill in Model)
                         {
-                            <span>@acc.Name</span>
-                            break;
+                            <tr>
+                                <td>@(stt += 1)</td>
+                                <td>
+                                    @foreach (var acc in ViewBag.account)
+                                    {
 
+                                        if (acc.Id == itembill.AccountId)
+                                        {
+                                            <span>@acc.Name</span>
+                                            break;
+
+                                        }
+                                    }
+                                </td>
+                                <td>
+                                    @itembill.Code
+                                </td>
+
+
+                             
+                                <td>
+                                    @itembill.PhoneNumber
+                                </td>
+
+                                <td>
+                                    @string.Format(new CultureInfo("vi-VN"), "{0:C0}",itembill.TotalMoney)
+                                </td>
+                                <td>@itembill.Type</td>
+
+
+
+                                <td>
+                                    @{
+                                        DateTime createDate = itembill.CreateDate;
+                                        string formattedDate = createDate != DateTime.MinValue
+                                        ? createDate.ToString("dd/MM/yyyy")
+                                        : "Chưa thay đổi";
+                                    }
+                                    @formattedDate
+                                </td>
+                                <td>
+                                    @{
+                                        if (itembill.PayDate != null)
+                                        {
+                                            @itembill.PayDate
+
+                                        }
+                                        else
+                                        {
+
+                                            <span>Chưa thanh toán.</span>
+                                        }
+                                    }
+
+                                </td>
+                                <td>
+                                    @if (itembill.Status == 1)
+                                    {
+
+                                        <span>Chờ xác nhận</span>
+                                    }
+                                    else if (itembill.Status == 2)
+                                    {
+
+                                        <span>Đã xác nhận đơn hàng </span>
+                                    }
+                                    else if (itembill.Status == 3)
+                                    {
+                                        <span> Đang giao  </span>
+                                    }
+                                    else if (itembill.Status == 4)
+                                    {
+                                        <span>Đã Thanh Toán </span>
+                                    }
+                                    else if (itembill.Status == 0)
+                                    {
+                                        <span>Chờ hủy </span>
+                                    }
+                                </td>
+                        
+
+
+                            </tr>
                         }
                     }
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Code)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.TotalMoney)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Type)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreateDate)
-                </td>
-
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.PayDate)
-                </td>
-
-                <td>
-                    @if (item.Status == 1)
+                    else
                     {
-
-                        <span>Chờ xác nhận</span>
+                        <tr>
+                            <td colspan="12" class="text-center">Không có dữ liệu.</td>
+                        </tr>
                     }
-                    else if (item.Status == 2)
-                    {
-
-                        <span>Đã xác nhận đơn hàng </span>
-                    }
-                    else if (item.Status == 3)
-                    {
-                        <span> Đang giao  </span>
-                    }
-                    else if (item.Status == 4)
-                    {
-                        <span>Đã Thanh Toán </span>
-                    }
-                    else if (item.Status == 0)
-                    {
-                        <span>Chờ hủy </span>
-                    }
-
-                </td>
-
-            </tr>
-        }
-    </tbody>
-</table>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
